# data-fetcher-app

./: .checkov.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  TODO.md  catalog-info.yaml  docker-compose.yml  mkdocs.yaml  package.json  pyproject.toml  requirements.txt
.cursor/rules/: aggresive-defenseive-programming.mdc  always-RTFM.mdc  docstring-standards.mdc  documentation-maintenance.mdc  inside-dev-container.mdc  keep-comments.mdc  script-safety-testing.mdc  the-customers-always-wrong.mdc  use-cursor-todos.mdc  use-poetry.mdc  use-tmp-dir.mdc
.devcontainer/: Dockerfile  README-GPG.md  README.md  devcontainer.json  entrypoint.sh  git-config  shell-config.sh  zsh-config.sh
.github/workflows/: call-bump-version.yaml  call-pre-commit-autoupdate.yaml  call-python.yaml  call-repo-hygiene.yaml
config_bak/: sftp_config.yaml
data_fetcher/: __init__.py  core.py  factory.py  fetcher.py  global_credential_provider.py  global_kv_store.py  global_storage.py  logging.py  main.py  registry.py
data_fetcher/bundle_loaders/: __init__.py  api_loader.py  http_loader.py  sftp_loader.py
data_fetcher/bundle_locators/: README.md  __init__.py  api_bundle_locators.py  api_generic_bundle_locators.py  api_pagination_bundle_locators.py  sftp_bundle_locators.py
data_fetcher/configurations/: __init__.py  fr.py  us_fl.py
data_fetcher/credentials/: __init__.py  aws.py  base.py  sftp_credentials.py
data_fetcher/kv_store/: README.md  base.py  memory.py  redis_store.py
data_fetcher/protocols/: __init__.py  authentication.py  http_manager.py  sftp_manager.py
data_fetcher/storage/: __init__.py  builder.py  file_storage.py  lineage_storage.py  s3_storage.py
data_fetcher/utils/: persistence_utils.py  retry.py
docs/: APPLICATION_REQUIREMENTS.md  docstring_standards.md  documentation_guide.md  index.html  index.md  local-testing.md  retry_consolidation_summary.md  troubleshooting.md
docs/01_architecture/: README.md  component_interactions.md  component_relationships.md  core_orchestration_flow.md  high_level_architecture.md  module_hierarchy.md  overview.md  storage_architecture.md
docs/02_configurations/: README.md  api.md  overview.md  scheduling.md  sftp.md  us_fl_test_setup.md
docs/03_application_configuration/: detailed_configuration.md  logging.md  overview.md
docs/03_global_configuration/: README.md  detailed_configuration.md  logging.md  overview.md
docs/04_persistence/: README.md  features.md  kv_store.md  overview.md
docs/05_storage/: README.md  data_flow_sequence.md  overview.md  s3.md
docs/06_testing/: README.md  overview.md
docs/07_deployment/: README.md  overview.md
docs/adr/: 0001-record-architecture-decisions.md  0003-checkov-exclusion-list.md  README.md
docs/architecture/: README.md
docs/assets/: build_docs.py
docs/configurations/: README.md  creating_a_recipe.md  fr_api.md  us_fl_sftp.md
docs/contributing/: code_standards.md  contributing_guide.md  development_setup.md  logging_development.md
docs/deployment/: health_checks.md  overview.md
docs/diagrams/: README.md  component_relationships.mmd  convert_diagrams.sh  data_flow_sequence.mmd  high_level_architecture.mmd  module_hierarchy.mmd  storage_architecture.mmd
docs/plugins/: __init__.py  sidebar_toggle.py
docs/references/: README.md  factory_functions.md  naming_conventions.md  retry_consolidation_summary.md  terminology.md  us_fl_test_setup.md
docs/stylesheets/: logo-sizing.css  opencorporates.css  toggle-sidebar-fix.css
docs/testing/: debugging_tests.md  mock_services.md  overview.md  test_cases_framework.md  writing_tests.md
docs/troubleshooting/: troubleshooting_guide.md
docs/user_guide/: README.md  application_configuration.md  command_line_usage.md  docker_usage.md  getting_started.md
examples/: basic_usage_example.py  credential_provider_example.py  global_config_example.py  kv_store_example.py  persistence_example.py
infra/terraform/: .terraform.lock.hcl  main.tf
mocks/: README.md
mocks/fr_siren_api/: README.md
mocks/test_cases/: README.md
mocks/us_fl/: README.md
oc_fetcher/: global_kv_store.py  main.py  registry.py
oc_fetcher/bundle_loaders/: __init__.py  api_loader.py  http_loader.py
oc_fetcher/bundle_locators/: README.md  api_generic_bundle_locators.py  sftp_bundle_locators.py
oc_fetcher/configurations/: us_fl.py
oc_fetcher/credentials/: __init__.py  environment.py
oc_fetcher/kv_store/: README.md  __init__.py  base.py  memory.py
oc_fetcher/protocols/: __init__.py
oc_fetcher/storage/: __init__.py
scripts/: README.md  __init__.py  build_docs.py  check_class_naming.py
src/: sftp_to_s3.py
src/data_fetcher_app/: __init__.py  app_config.py  cli_config.py  health.py  main.py
src/data_fetcher_configs/: __init__.py  fr.py  us_fl.py
src/data_fetcher_core/: README.md  __init__.py  config.py  config_factory.py  core.py  exceptions.py  factory.py  fetcher.py  global_kv_store.py  global_storage.py  logging.py  protocol_config.py  recipebook.py  registry.py  retry.py  strategy_registration.py  strategy_types.py
src/data_fetcher_http/: __init__.py  factory.py  http_config.py  http_connection.py  http_loader.py  http_manager.py  http_pool.py
src/data_fetcher_http_api/: __init__.py  api_bundle_locators.py  api_generic_bundle_locators.py  api_loader.py  api_pagination_bundle_locators.py  factory.py  fr_strategy_factories.py  strategy_factories.py
src/data_fetcher_recipes/: __init__.py  fr.py  us_fl.py
src/data_fetcher_sftp/: __init__.py  authentication.py  sftp_bundle_locators.py  sftp_config.py  sftp_credentials.py  sftp_gating.py  sftp_loader.py  sftp_manager.py  sftp_pool.py  strategy_factories.py
stubs/: README.md
tests/: __init__.py  conftest.py  test_sftp_to_s3.py
tests/functional/: test_functional_fr.py  test_functional_us_fl.py
tests/integration/: test_integration_redis.py  test_integration_s3.py  test_integration_sftp.py
tests/test_functional/: docker_helpers.py  simple_mock_server.py  test_all_functional.py  test_case_helper.py  test_fr.py  test_fr_functional.py  (+3 more)
(+246 files in other folders)
