[tool.poetry]
name = "data-fetcher-sftp"
version = "0.0.1"
description = "Data Fetcher SFTP service for Bots"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
paramiko = "^3.5.1"
boto3 = "^1.38.10"
pyyaml = "^6.0.2"
tenacity = "^9.1.2"
ruff = "^0.11.10"
mypy = "^1.15.0"
types-paramiko = "^3.5.0.20250516"
types-pyyaml = "^6.0.12.20250516"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
